# praxis

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.claude/agents/: PATCHES.md  README.md  ROADMAP.md  backend-api.md  backend-data.md  backend-lead.md  backend-mlops.md  backend-test.md  code-reviewer.md  commit-push-pr.md  commit.md  factor-library.md  frontend-charts.md  frontend-lead.md  frontend-state.md  frontend-test.md  frontend-ui.md  intel-crawler.md  intel-lead.md  intel-validator.md  llm-verifier.md  master-orchestrator.md  phd-council.md  pm-discretionary.md  research-backtest.md  research-causal.md  research-data-ingest.md  research-execution.md  research-features.md  research-lead.md  (+4 more)
features/: registry.yaml
migrations/: alembic.ini  env.py
services/backend/: __init__.py  config.py  http_client.py  main.py  pyproject.toml
services/backend/adapters/: __init__.py
services/backend/adapters/db/: __init__.py  engine.py  models.py  repositories.py
services/backend/adapters/http/: __init__.py  app.py  audit_middleware.py  dependencies.py  middleware.py
services/backend/adapters/http/routes/: audit.py  auth.py  experiments.py  health.py  hypotheses.py  intelligence.py  live.py  portfolios.py  research.py  settings.py
services/backend/domain/: __init__.py  audit.py  errors.py  models.py  ports.py  trading_limits.py
services/backend/monitoring/: __init__.py  health.py
services/backend/schemas/: common.py  experiments.py  hypotheses.py  verifier.py
services/backend/workers/: __init__.py  tasks.py
tests/: conftest.py
(+110 files in other folders)
