[project]
name = "praxis"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]
ignore = [
    "B008",  # Depends() in FastAPI route defaults is idiomatic
    "N803",  # X, Y are conventional ML variable names
]

[tool.ruff.lint.isort]
known-first-party = ["services"]

[tool.mypy]
strict = true
python_version = "3.12"
packages = ["services"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["mlflow.*", "arq.*", "polars.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
